[package]
name = "api"
version = "0.1.0"
authors = ["kanel <soengkanel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version="1.4.5", features=["postgres"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
rocket = "0.4.5"
